[package]
name = "kv"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio        = { version = "1", features = ["full"] }
tonic        = "0.11"
prost        = "0.12"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = "0.3"
rand         = "0.8"
axum         = "0.7"
tokio-stream = "0.1"
ratatui      = "0.26"
crossterm    = "0.27"

[build-dependencies]
tonic-build  = "0.11"
